@@ -10,38 +10,34 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 public class GymClassRepositoryImpl implements GymClassRepository {
 
     private final GymClassJpaRepository jpaRepository;
-    private final GymClassMapper mapper;
 
-    public GymClassRepositoryImpl(GymClassJpaRepository jpaRepository,
-                                  GymClassMapper mapper) {
+    public GymClassRepositoryImpl(GymClassJpaRepository jpaRepository) {
         this.jpaRepository = jpaRepository;
-        this.mapper = mapper;
     }
 
     @Override
     public GymClass save(GymClass gymClass) {
-        GymClassEntity entity = mapper.toEntity(gymClass);
-        return mapper.toDomain(jpaRepository.save(entity));
+        GymClassEntity entity = GymClassMapper.toEntity(gymClass);
+        return GymClassMapper.toDomain(jpaRepository.save(entity));
     }
 
     @Override
     public Optional<GymClass> findById(ClassId classId) {
         return jpaRepository.findById(classId.getValue())
-                .map(mapper::toDomain);
+                .map(GymClassMapper::toDomain);
     }
 
     @Override
     public List<GymClass> findAll() {
         return jpaRepository.findAll()
                 .stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .map(GymClassMapper::toDomain)
+                .toList();
     }
 
     @Override
